Fix 'too wide' error message, nodes are now 250px wide at max
	modified:   app/assets/stylesheets/style.css

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -18,6 +18,8 @@ div.node {
     padding-left: 15px;
     padding-right: 15px;
     margin: 5px;
+    max-width: 250px;
+    word-break: break-word;
 }
 
 .js-mindmap-active div.node.active {
